# vmap

./: capture_test.py  cli_test.py  frame_read_test.py  image_grid_test.py  main.py  mss_test.py  requirements.txt  setup.cfg  setup.py  states.py  test.py  test1.py  test2.py
controllers/: controller.py  display.py  interface.py  main.py  main_frame.py  settings.py  states.py  store.py
controllers/rectangles/: rectangles.py  utils.py
controllers/tools/: collision.py  image_capture.py  label_instance.py  mapping.py  mapping_utils.py  preprocess.py  rectangle_utils  window_selection.py
data/: base.py  builder.py  data.py  engine.py  interface.py  io.py  labels.py  paths.py  project_types.py  schemas.py
etc/: requirements.txt
gscrap/: capture_test.py  listbox_test.py  main.py  test.py  window_selection_test.py
gscrap/controllers/: store.py
gscrap/data/: attributes.py  builder.py  data.py  engine.py  io.py  labels.py  paths.py  project_types.py  rectangle_labels.py  schemas.py
gscrap/detection/: models.py  utils.py
gscrap/gui/: button.py  menu_bar.py
gscrap/image_capture/: capture_loop.py  display.py  image_capture.py  image_comparators.py  image_filters.py  looper.py  utils.py  video.py  video_navigators.py  video_reader.py  video_recorder.py  (+1 more)
models/: images.py  labels.py  models.py  projects.py  rectangle_labels.py  rectangles.py  store_managing.py  storemanager.py
protos/: compression.proto  poker.proto
src/: main.py
tests/: navigation_test.py
tools/: image_capture.py  mapping.py  windows.py
utils/: generators.py  installation.py
(+234 files in other folders)
