[metadata]
name = gscrap
license = MIT
platforms = linux
classifiers = Programming Language :: Python :: 3.8

[options]
zip_safe = False
packages = find:
install_requires =
    click==8.0.1
    decorator==4.4.2
    ffmpeg-python==0.2.0
    future==0.18.2
    ImageHash==4.2.0
    numpy==1.20.1
    opencv-python==4.5.1.48
    Pillow==8.1.0
    psutil==5.8.0
    pytesseract==0.3.7
    python-dateutil==2.8.1
    python-libxdo==0.1.2a1
    PyWavelets==1.1.1
    scipy==1.6.1
    six==1.15.0
    SQLAlchemy==1.3.23
    videoio==0.2.2
    xlib==0.21
python_requires >= 3.8
package_dir = =src

[options.packages.find]
where=src, gscrap
include = gscrap, gscrap.*